[package]
name = "korean_regex"
version = "0.2.1"
edition = "2021"
license = "MIT"
description = "Regex extension for Hangeul analysis."
authors = ["ilotoki0804 <ilotoki0804@gmail.com>"]
keywords = ["korean", "regex"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.10.3"
